--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div *ngFor="let message of messageList">
-  {{message}}
-</div>
-
-<input [(ngModel)]="newMessage" (keyup)="$event.keyCode == 13 && sendMessage()"/>
-<button (click)="sendMessage()">Send Message</button>
+<app-chat></app-chat>
